# rdc

./: .gitignore  CMakeLists.txt  README.md
bench/: rdc_benchmark.cc
cmake/: benchmark.cmake  benchmarks.cmake  deps.cmake  eigen.cmake  example.cmake  googletest.cmake  rdc.cmake  tests.cmake
example/: main.cc
rdc/: rdc.h
test/: data_type_test.cc  numpy_comparison_test.cc
